...
    <string name="eatingsoon_target">Eating Soon target value</string>
    <string name="activity_duration">Activity duration (minutes)</string>
    <string name="activity_target">Activity target value</string>
    <string name="hypo_duration">Hypo duration (minutes)</string>
    <string name="hypo_target">Hypo target value</string>
    <string name="fill_bolus_title">Fill/Prime standard insulin amounts</string>
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="button3">Button 3</string>
    <string name="prefs_range_title">Range for visualization</string>
    <string name="prefs_range_summary">High and low mark for the charts in Overview and Smartwatch</string>
    <string name="low_mark">LOW mark</string>
    <string name="high_mark">HIGH mark</string>
...
